re PR c++/20465 (error: no matching function for call)

cp:
	PR c++/20465
	PR c++/20381
	* typeck.c (build_ptrmemfunc): Allow OFFSET_REF when processing a
	template.
testsuite:
	PR c++/20465
	PR c++/20381
	* g++.dg/template/ptrmem12.C: New.

From-SVN: r96864